tests/semantic_errors/test20_3.tl
-- test case 22.
-- Description : function semantic: declare builtin function(error)

-- Expected : '3'
require "ifj21" 
 global readi : function() function me() : string  end 
